--- a/WifiShare/res/values/dimens.xml
+++ b/WifiShare/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="InformationTextSize">20dp</dimen>
+	<dimen name="clientListSize">13dp</dimen>
 
     <color name="Grey">#483D8B</color>
     <color name="white">#ffffff</color>
